[package]
name = "sxtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sxtest"
path = "src/main.rs"

#[[bin]]
#name = "redis_pubsub"
#path = "src/redis_pubsub.rs"

[dependencies]
futures = "0.3.13"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
subxt = { path = "../../subxt/subxt" }
sp-keyring = "6.0.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"

redis = { version = "0.17.0", features = ["tokio-comp"] }
#futures-util = { version = "0.3.15", default-features = false, optional = true }

